--- a/source/_drafts/《草稿1》.md
+++ b/source/_drafts/《草稿1》.md
@@ -107,3 +107,101 @@ public enum Singleton {
 }
 
 ```
+#### 优点
+ 1. 减少内存开销
+ 2. 避免对资源多重占用
+ 3. 可以设置全局访问点
+
+#### 缺点
+ 1. 难扩展
+ 2. 如果需要持有Context，容易引发内存泄漏
+
+## Builder模式
+将复杂的对象与它的表示分离。
+
+#### 使用场景
+1. 相同的方法，不同执行顺序导致不同的事件结果。
+2. 多个部件可以装配到同一对象，但产生的结果不一样。
+3. 产品类十分复杂，或不同调用顺序产生不同作用。
+4. 初始化过程复杂
+
+#### 优点
+1. 封装性良好
+2. 容易扩展
+
+#### 缺点
+1. 需要Builder与Director类，额外消耗内存。
+
+
+## 工厂模式与抽象工厂模式
+工厂模式中工厂会直接创造出特定的一种子类，比如CarFactory下就创建所有的Car，宾利、兰博基尼、布加迪威龙，
+他们虽然不是同一类，但都是Car的子类。
+而抽象工厂模式用于创建同一族的，比如Factory的子类可以有海尔、美的等，而他们继承的方法都是用于创造空调、冰箱。
+
+列如Java中的Skin库（源码来自[设计模式：工厂三兄弟之抽象工厂模式](https://tracylihui.github.io/2015/07/23/designPattern/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%EF%BC%9A%E5%B7%A5%E5%8E%82%E4%B8%89%E5%85%84%E5%BC%9F%E4%B9%8B%E6%8A%BD%E8%B1%A1%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/)）
+``` java
+interface Button {  
+    public void display();  
+}  
+
+//Spring按钮类：具体产品  
+class SpringButton implements Button {  
+    public void display() {  
+        System.out.println("显示浅绿色按钮。");  
+    }  
+}  
+
+//Summer按钮类：具体产品  
+class SummerButton implements Button {  
+    public void display() {  
+        System.out.println("显示浅蓝色按钮。");  
+    }
+}  
+
+//文本框接口：抽象产品  
+interface TextField {  
+    public void display();  
+}  
+
+//Spring文本框类：具体产品  
+class SpringTextField implements TextField {  
+    public void display() {  
+        System.out.println("显示绿色边框文本框。");  
+    }  
+}  
+
+//Summer文本框类：具体产品  
+class SummerTextField implements TextField {  
+    public void display() {  
+        System.out.println("显示蓝色边框文本框。");  
+    }
+}  
+
+//界面皮肤工厂接口：抽象工厂  
+interface SkinFactory {  
+    public Button createButton();  
+    public TextField createTextField();  
+}  
+
+//Spring皮肤工厂：具体工厂  
+class SpringSkinFactory implements SkinFactory {  
+    public Button createButton() {  
+        return new SpringButton();  
+    }  
+
+    public TextField createTextField() {  
+        return new SpringTextField();  
+    }  
+}  
+
+//Summer皮肤工厂：具体工厂  
+class SummerSkinFactory implements SkinFactory {  
+    public Button createButton() {  
+        return new SummerButton();  
+    }  
+
+    public TextField createTextField() {  
+        return new SummerTextField();  
+    }  
+}
+```
