--- a/source/_drafts/《草稿1》.md
+++ b/source/_drafts/《草稿1》.md
@@ -85,6 +85,7 @@ public class Singleton{
   /*
   *静态内部类单例模式
   *《Java并发编程实践》中推荐这种写法。
+  * 静态内部类在第一次被调用时才初始化，有JVM保证线程安全。
   */
   private Singleton instance;
   public static Singleton getInstance() {
